added symfony/console + create user command + some entities
